--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev_test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test NODE_OPTIONS=--experimental-vm-modules jest -i",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test": "dotenv -e .env.test prisma migrate dev && node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "start": "node --experimental-vm-modules src/server.js",
     "dev": "nodemon src/server.js"
   },
