--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://pgroot:secret@db_ci:5432/memepedia_test
+DATABASE_URL=postgres://postgres:postgres@db_ci:5432/memepedia_test
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=memepedia_test
