--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev_test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test NODE_OPTIONS=--experimental-vm-modules jest -i",
-    "test": "dotenv -e .env.test prisma migrate dev && node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "start": "node --experimental-vm-modules src/server.js",
+    "test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
@@ -16,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "dotenv-cli": "^6.0.0",
     "express": "^4.17.3",
