--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
-DATABASE_URL=postgres://postgres:764082@db_ci:5432/memepedia_test
+DATABASE_URL=postgres://postgres:postgres@db_ci:5432/memepedia_test
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=764082
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=memepedia_test
 NODE_ENV=test
