--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,7 +12,7 @@ jobs:
           envkey_POSTGRES_USER: "postgres"
           envkey_POSTGRES_PASSWORD: "764082"
           envkey_POSTGRES_DB: "memepedia_test"
-          envkey_DATABASE_URL: "postgres://postgres:764082@db_ci:5432/memepedia_test"
+          envkey_DATABASE_URL: "postgres://postgres:postgres@db_ci:5432/memepedia_test"
           file_name: ".env.test"
       - name: Run tests
         run: docker-compose -f docker-compose-test.yml && run node_app_ci npm run test
